<resources>
    <string name="app_name">Washable</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_section_title1">My Information</string>
    <string name="title_section_title2">Others</string>
    <string name="title_section1">My Addresses</string>
    <string name="title_section2">My Orders</string>
    <string name="title_section3">Order Track</string>
    <string name="title_section4">FAQs</string>
    <string name="title_section5">About L Works</string>
    <string name="title_section6">Logout</string>

    <string name="tab_title_1">Men</string>
    <string name="tab_title_2">Women</string>
    <string name="tab_title_3">Children</string>
    <string name="tab_title_4">Others</string>

    <string name="washable_men">Wash and fold- men</string>
    <string name="washable_women">Wash and fold - women</string>
    <string name="washable_children">Wash and fold - children</string>
    <string name="washable_others">Wash and fold - others</string>

    <string name="dryclean_men">Dry cleaning - men</string>
    <string name="dryclean_women">Dry cleaning - women</string>
    <string name="dryclean_children">Dry cleaning - children</string>
    <string name="dryclean_others">Dry cleaning - others</string>

    <string name="laundry_men">Laundry - men</string>
    <string name="laundry_women">Laundry - women</string>
    <string name="laundry_children">Laundry - children</string>
    <string name="laundry_others">Laundry - others</string>

    <string name="washandlaundry_men">Wash and laundry - men</string>
    <string name="washandlaundry_women">Wash and laundry - women</string>
    <string name="washandlaundry_children">Wash and laundry - children</string>
    <string name="washandlaundry_others">Wash and laundry - others</string>

    <string name="mycart">My cart</string>
    <string name="select_category">Select category</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="about">About L Works</string>
    <string name="version">v1.0.0</string>
    <string name="about_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Praesent nec neque non ligula commodo fermentum a ac turpis. Donec sagittis quam ut
        ex feugiat suscipit. Nullam dignissim orci nec pellentesque condimentum. In sit amet
        leo imperdiet, aliquet ex luctus, finibus neque. Vestibulum sit amet odio eget neque
        hendrerit commodo. Morbi magna metus, fringilla lacinia erat sit amet, maximus scelerisque
        urna. Cras eu eleifend odio. Vestibulum ante ipsum primis in faucibus orci luctus et
        ultrices posuere cubilia Curae; Aliquam tempor quam risus. Fusce in lacinia tortor.
        Quisque at arcu libero. Nulla eros ipsum, pellentesque in mattis sit amet, viverra a nunc.</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="add_an_address">Add Address</string>
    <string name="no_address_yet">No Stored Address Yet</string>
    <string name="title_activity_payment_login">PaymentLoginActivity</string>
    <string name="login">Login</string>
    <string name="faceboock">Facebook</string>
    <string name="google">Google</string>
    <string name="payment_screen">Payment</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="terms">Terms and conditions</string>
</resources>
